--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
     "lucide-react": "^0.396.0",
-    "next": "14.2.4",
-    "react": "^18",
+    "next": "^14.2.4",
+    "react": "^18.3.1",
     "react-countup": "^6.5.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
